--- a/css/solutions.css
+++ b/css/solutions.css
@@ -34,8 +34,16 @@
 
 }
 
-/*10th TASK*/
+/*7-8th TASK*/
+.goals-container input:focus, select:focus {
+    border: 4px  solid blue;
+    box-shadow: 0px 0px 10px blue;
+    outline: none;
+}
 
+
+
+/*10th TASK*/
 
 .progress-bar {
     position: relative;
